--- a/src/App.css
+++ b/src/App.css
@@ -219,3 +219,78 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
     margin-top: 20px;
     font-weight: 600;
   }
+
+
+  .logsection{
+    background-image: url(/public/intro.jpg);
+    padding: 100px 0; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .log_block{
+    background-color: #000;
+    width: 500px;
+    height: 500px;
+  
+  }
+  
+  .log_title{
+    padding-top: 70px;
+    text-align: center;
+    color: #fff;
+    font-size: 34px;
+  }
+  
+  .log_inner{
+    padding: 50px 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .log-inp{
+    width: 300px;
+    margin-bottom: 20px;
+    color: #fff;
+    height: 40px;
+    padding: 5px;
+    font-size: 15px;
+    background-color: #000;
+    border: 0;
+    border-bottom: 1px solid #636B78;
+    display: block;
+  }
+  
+  .inp_btn{
+    margin-top: 20px;
+    width: 180px;
+    border-radius: 15px;
+    font-weight: 700;
+    background-color: #636B78;
+    font-family: 'Forum', cursive;
+    padding: 5px;
+    font-size: 23px;
+    margin-bottom: 20px;
+  }
+  
+  
+  
+  .auth_inner{
+    display: flex;
+    justify-content: center;
+    
+  }
+  
+  .auth_link{
+    color: #fff;
+    font-weight: 500;
+  }
+  
+  .auth_text{
+    color: #fff;
+    font-size: 20px;
+  }
+  
+  
