feat:adding pages

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 .m_title{
     font-size: 40px;
     color: #fff;
+
     font-weight: bold;
 }
 
@@ -164,6 +165,17 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
     transition: .3s linear;
 }
 
+.allmovies{
+  background-color: #000;
+  padding: 50px 0;
+}
+
+.allmovies_inner{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .main_img:hover{
     transform: scale(1.2);
 }
@@ -171,11 +183,13 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 .m_suptitle{
     font-size: 15px;
     color: gray;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .m_titles{
     cursor: pointer;
-    margin: 15px 0;
+    margin-bottom: 10px;
     font-size: 20px;
     font-weight: bold;
     color: #fff;
@@ -183,6 +197,46 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 
 
 /**********************/
+
+.movie{
+  background-color: #fff;
+  display: flex;
+  
+}
+
+iframe{
+  margin-top: 50px;
+  width: 1190px;
+  height: 450px;
+}
+
+.mov-img{
+  width: 354px;
+  height: 442px;  
+}
+
+.movie_right{
+  margin-top: 50px;
+  width: 800px;
+  margin-left: 150px;
+}
+
+.movie_title{
+  font-size: 50px;
+  font-weight: 800;
+  margin-bottom: 15px;
+}
+
+.movie_sub_info{
+  font-size: 20px;
+  color:#818386;
+}
+
+.movir_desc{
+  font-size: 16px;
+  width: 650px;
+  margin-top: 20px;
+}
 
 
 .footer_inner{
